--- a/coffee-philips-5400.yaml
+++ b/coffee-philips-5400.yaml
@@ -16,14 +16,14 @@ esp32:
 # Enable logging
 #Журналирование
 logger:
-  level: DEBUG #NONE
+  level: INFO #NONE
   baud_rate: 0
 
 # Enable Home Assistant API
 api:
 
-# web_server:
-#   port: 80
+web_server:
+  port: 80
 
 ota:
   platform: esphome
@@ -67,11 +67,10 @@ external_components:
       path: ./components
 
 saeco_series_6000:
+  id: saeco_series_6000_component
   uart_display: uart_display
   uart_mainboard: uart_mainboard
   debug: true
-
-  #Сенсор в который компонент публикует статус в цифровом виде
   state_sensor:
     name: Work State
     id: idControlSensor
@@ -173,3 +172,18 @@ text_sensor:
     id: idErrorCode
     icon: mdi:alert-circle-outline
     update_interval: never
+
+button:
+  - platform: template
+    name: "Отправить три пакета"
+    on_press:
+      then:
+        - lambda: |-
+            std::vector<std::vector<uint8_t>> pkts = {
+              {0xAA,0xAA,0xAA,0x90,0x0B,0x0A,0x05,0x03,0x00,0x02,0x00,0x00,0x64,0x00,0x00,0x00,0x39,0xBF,0x5B,0x74,0x55},
+            };
+            id(saeco_series_6000_component)->send_packets_to_mainboard(pkts, 50);
+
+#[20:45:34][I][saeco_series_6000:079]: Packet from Display: AA AA AA 93 0A 01 01 57 15 3A ED 55
+#[20:45:34][I][saeco_series_6000:079]: Packet from Display: AA AA AA 90 0B 0A 05 03 00 02 00 00 64 00 00 00 39 BF 5B 74 55
+#[20:45:35][I][saeco_series_6000:079]: Packet from Display: AA AA AA 91 0C 01 03 42 C0 B0 AD 55"
